--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--meta tags-->
     <meta name="desription" content="Helsingborg gaming club for gamers in Helsingborg Skåne Sweden.">
     <meta name="keywords" content="gaming, counter strike, csgo, dota 2, dota, league of legends, rocket league, tekken, street fighter, fortnite">
+    <link >
 
     <title>Helsingborg Gaming Club</title>
 </head>
@@ -15,7 +16,25 @@
     <!--header-->
     <h1><span>Helsingborg Gaming Club</span></h1>
     <!--Content-->
-    <div id="whatweplay"></div>
+    <div id="whatweplay">
+        <ul><p>Games:</p>
+            <li>Counter Strike: Global Offensive</li>
+            <li>Rocket league</li>
+            <li>Dota 2</li>
+            <li>League of Legends</li>
+            <li>Tekken 8</li>
+            <li>Street Fighter 6</li>
+            <li>Guilty Gear Strive</li>
+            <li>Fortnite</li>
+        </ul>
+        <h1>What we do?</h1>
+        <span>
+            Primarily focused on video games with a competitive scene,
+            we grow together as players through competition and look too constantly improve.
+            If this sounds like something you would enjoy feel free too <a href="#contact">Contact us</a>
+        </span>
+        <img id="gaming1" src="/assets/photos/gaming1.jpg" alt="Competitive PC gaming in with teammates>
+    </div>
     <div id="whereandwhen"></div>
     <div id="contact"></div>
     <!--Footer-->
