--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h1><span>Helsingborg Gaming Club</span></h1>
     <!--Content-->
     <div id="whatweplay">
+        <h3>What we play</h3>
         <ul><p>Games:</p>
             <li>Counter Strike: Global Offensive</li>
             <li>Rocket league</li>
@@ -27,7 +28,7 @@
             <li>Guilty Gear Strive</li>
             <li>Fortnite</li>
         </ul>
-        <h1>What we do?</h1>
+        <h3>What we do</h3>
         <span>
             Primarily focused on video games with a competitive scene,
             we grow together as players through competition and look too constantly improve.
@@ -36,6 +37,8 @@
         <img id="gaming1" src="/assets/photos/gaming1.jpg" alt="Competitive PC gaming in with teammates>
     </div>
     <div id="whereandwhen"></div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2228.6297104763707!2d12.699100999999997!3d56.042399999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652324b2b276b11%3A0xa9aee63d7bffc239!2sHelsingborg%20City%20Library!5e0!3m2!1sen!2sse!4v1710077348997!5m2!1sen!2sse" 
+    width="900" height="585" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div id="contact"></div>
     <!--Footer-->
     
