bug fixes and readmefile

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <img class="half" id="gaming1" src="assets/photos/gaming1.jpg" alt="Competitive PC gaming in with teammates">
             <div id="wwpcontent">
             <div id="gamelist">
-
-            <ul ><span>Games:</span>
+                <span>Games:</span>      
+            <ul >
                 <li>Counter Strike: Global Offensive</li>
                 <li>Rocket league</li>
                 <li>Dota 2</li>
@@ -94,13 +94,13 @@
         <div id="contactform">
         <form method="POST" action="https://formdump.codeinstitute.net/">
             <label for="name">Name</label>
-            <input id="name" type="text"></input>
+            <input id="name" type="text">
             <br>
             <label for="email">Email</label>
             <input id="email" type="email">
             <br>
             <label for="text"></label>
-            <textarea id="text" type="textarea"> </textarea>
+            <textarea id="text"> </textarea>
             <label for="submit"></label>
             <input id="submit" type="submit">
         </form>   
@@ -114,9 +114,9 @@
         
         <div id="socialmedia">
 
-        <a id="twitter" class="socialmediaicons" href="https://twitter.com" target="_blank" rel="noopener"><img id="twitter" src="/assets/photos/twitter.png" alt="twitter icon that goes too our twitter page"></a>
-        <a id="facebook" class="socialmediaicons" href="https://facebook.com" target="_blank" rel="noopener"><img id="facebook" src="/assets/photos/facebook.png" alt="facebook icon that goes too our facebook page"></a>
-        <a id="instagram" class="socialmediaicons" href="https://instagram.com" target="_blank" rel="noopener"><img id="instagram" src="/assets/photos/instagram.png" alt="instagram icon that goes too our instagram page"></a>
+        <a id="twitterl" class="socialmediaicons" href="https://twitter.com" target="_blank" rel="noopener"><img id="twitter" src="/assets/photos/twitter.png" alt="twitter icon that goes too our twitter page"></a>
+        <a id="facebookl" class="socialmediaicons" href="https://facebook.com" target="_blank" rel="noopener"><img id="facebook" src="/assets/photos/facebook.png" alt="facebook icon that goes too our facebook page"></a>
+        <a id="instagraml" class="socialmediaicons" href="https://instagram.com" target="_blank" rel="noopener"><img id="instagram" src="/assets/photos/instagram.png" alt="instagram icon that goes too our instagram page"></a>
           
     </div> 
     <p id="contactp">Email: HelsingborgGamingClub@helsingborg.com</p>      
