--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         
         <div id="socialmedia">
 
-        <a id="twitterl" class="socialmediaicons" href="https://twitter.com" target="_blank" rel="noopener"><img id="twitter" src="/assets/photos/twitter.png" alt="twitter icon that goes too our twitter page"></a>
-        <a id="facebookl" class="socialmediaicons" href="https://facebook.com" target="_blank" rel="noopener"><img id="facebook" src="/assets/photos/facebook.png" alt="facebook icon that goes too our facebook page"></a>
-        <a id="instagraml" class="socialmediaicons" href="https://instagram.com" target="_blank" rel="noopener"><img id="instagram" src="/assets/photos/instagram.png" alt="instagram icon that goes too our instagram page"></a>
+        <a id="twitterl" class="socialmediaicons" href="https://twitter.com" target="_blank" rel="noopener"><img id="twitter" src="assets/photos/twitter.png" alt="twitter icon that goes too our twitter page"></a>
+        <a id="facebookl" class="socialmediaicons" href="https://facebook.com" target="_blank" rel="noopener"><img id="facebook" src="assets/photos/facebook.png" alt="facebook icon that goes too our facebook page"></a>
+        <a id="instagraml" class="socialmediaicons" href="https://instagram.com" target="_blank" rel="noopener"><img id="instagram" src="assets/photos/instagram.png" alt="instagram icon that goes too our instagram page"></a>
           
     </div> 
     <p id="contactp">Email: HelsingborgGamingClub@helsingborg.com</p>      
