--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     </div>
     <div id="google">
-        <iframe id="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2228.6297104763707!2d12.699100999999997!3d56.042399999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652324b2b276b11%3A0xa9aee63d7bffc239!2sHelsingborg%20City%20Library!5e0!3m2!1sen!2sse!4v1710319927383!5m2!1sen!2sse" 
+        <iframe id="googlemap" title="Gooogle Map of Helsingborg Library" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2228.6297104763707!2d12.699100999999997!3d56.042399999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652324b2b276b11%3A0xa9aee63d7bffc239!2sHelsingborg%20City%20Library!5e0!3m2!1sen!2sse!4v1710319927383!5m2!1sen!2sse" 
         width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <!--Contact Section-->
@@ -99,7 +99,7 @@
             <label for="email">Email</label>
             <input id="email" type="email">
             <br>
-            <label for="text"></label>
+            <label id="message" for="text">Message</label>
             <textarea id="text"> </textarea>
             <label for="submit"></label>
             <input id="submit" type="submit">
